# DSCFinalProject

./: LICENSE  README.md  main.py  pyproject.toml
Website/: __init__.py  views.py
Website/static/: index.css
Website/templates/: base.html  home.html
