[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
sympy = "^1.10.1"
Flask = "^2.0.3"
Flask-Compress = "^1.11"
gevent = "^21.12.0"
matplotlib = "^3.5.1"
scipy = "^1.8.0"
numpy = "1.21.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"